Added title to top of password manager page
Also changed from table to flexbox here

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -27,10 +27,11 @@
     <div class="mc">
       <a href="#top" id="scrollToTop"></a>
       <span id="ableToDarken">
-        <button class="addButton" id="addButton">Add Password</button>
-
-        <i class="fas fa-cog" id="settingsButton"></i>
-
+        <div class="headerFlexbox">
+          <i class="fas fa-cog" id="settingsButton"></i>
+          <h2 id="titleHeader">PM Dashboard</h2>
+          <button class="addButton" id="addButton">Add Password</button>
+        </div>
         <div class="queryScreen" id="queryScreen"></div>
         <div class="settingsScreen" id="settingsScreen">
           <i class="far fa-times-circle" id="closeSettings"></i>
