Added flex container for master password login

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -81,48 +81,50 @@
 
           <button class="confirmQuery" id="confirmQuery">Confirm</button>
         </div>
-        <div class="setupMasterPasswordScreen" id="setupMasterPasswordScreen">
-          <div class="setupMPScreenContainer">
-            <h1
-              class="createMasterPasswordHeader"
-              id="createMasterPasswordHeader"
-            >
-              Create Master Password
-            </h1>
-            <input
-              type="password"
-              class="newMasterPasswordField"
-              id="newMasterPasswordField"
-              placeholder="Master Password"
-              autofocus="autofocus"
-            />
-            <input
-              type="password"
-              class="renterMP"
-              id="renterMP"
-              placeholder="Confirm Master Password"
-            />
-            <meter
-              min="0"
-              low="1"
-              optimum="2"
-              high="3"
-              max="4"
-              id="passwordStrengthBar"
-            ></meter>
-            <button
-              class="confirmMasterPasswordButton"
-              id="confirmMasterPasswordButton"
-            >
-              Create Master Password
-            </button>
-            <div id="backContainer">
-              <a href="#" id="back">Back to main page</a>
+        <div class="setupMasterPasswordScreenFlexContainer">
+          <div class="setupMasterPasswordScreen" id="setupMasterPasswordScreen">
+            <div class="setupMPScreenContainer">
+              <h1
+                class="createMasterPasswordHeader"
+                id="createMasterPasswordHeader"
+              >
+                Create Master Password
+              </h1>
+              <input
+                type="password"
+                class="newMasterPasswordField"
+                id="newMasterPasswordField"
+                placeholder="Master Password"
+                autofocus="autofocus"
+              />
+              <input
+                type="password"
+                class="renterMP"
+                id="renterMP"
+                placeholder="Confirm Master Password"
+              />
+              <meter
+                min="0"
+                low="1"
+                optimum="2"
+                high="3"
+                max="4"
+                id="passwordStrengthBar"
+              ></meter>
+              <button
+                class="confirmMasterPasswordButton"
+                id="confirmMasterPasswordButton"
+              >
+                Create Master Password
+              </button>
+              <div id="backContainer">
+                <a href="#" id="back">Back to main page</a>
+              </div>
             </div>
+            <a href="appSelector.html" id="fromPMToMain"></a>
+            <a href="login.html" id="fromMainToLogin"></a>
+            <a href="account.html" id="fromMainToAccount"></a>
           </div>
-          <a href="appSelector.html" id="fromPMToMain"></a>
-          <a href="login.html" id="fromMainToLogin"></a>
-          <a href="account.html" id="fromMainToAccount"></a>
         </div>
       </span>
     </div>
