Added themes grid

--- a/src/appSelector.html
+++ b/src/appSelector.html
@@ -19,7 +19,61 @@
     <script src="resizeAppSelector.js"></script>
   </head>
   <body>
+    <div class="themeSelectorContainer">
+      <h1 id="closeThemeSelector">x</h1>
+      <h2 id="themeSelectorHeader">PM themes</h2>
+      <div class="backgroundGridContainer">
+        <img
+          id="backgroundGridItemPremiumAmin"
+          class="backgroundGridItem"
+          src="images/themes/purple-blue.png"
+          alt="Image not available"
+        />
+        <img
+          id="backgroundGridItemPremiumPurple"
+          class="backgroundGridItem"
+          src="images/themes/purple-classy.png"
+          alt="Image not available"
+        />
+        <img
+          id="backgroundGridItemNormalStyles"
+          class="backgroundGridItem"
+          src="images/themes/normal.png"
+          alt="Image not available"
+        />
+        <img
+          id="backgroundGridItemPremiumFrost"
+          class="backgroundGridItem"
+          src="images/themes/Frost.png"
+          alt="Image not available"
+        />
+        <img
+          id="backgroundGridItemPremiumBlack"
+          class="backgroundGridItem"
+          src="images/themes/black.png"
+          alt="Image not available"
+        />
+        <img
+          id="backgroundGridItemPremiumGrey"
+          class="backgroundGridItem"
+          src="images/themes/grey.png"
+          alt="Image not available"
+        />
+      </div>
+    </div>
     <div id="container">
+      <div class="showPUIButtonContainer">
+        <button class="showPUIButton">Show Premium Layouts</button>
+      </div>
+      <div class="exitPreviewContainer">
+        <button class="exitPreview">Exit preview</button>
+      </div>
+      <div class="upgradeToPContainer">
+        <button class="upgradeToP">
+          <span id="lockIconUpgrade">🗝️</span>
+          <p id="upgradeButtonText">Upgrade to premium</p>
+        </button>
+      </div>
       <div class="keyImage">
         <img id="realIcon" src="images/lockIcon.png" />
       </div>
