Finished upgrade button
TODO: add link to purchase premium

--- a/src/appSelector.html
+++ b/src/appSelector.html
@@ -63,7 +63,10 @@
     </div>
     <div id="container">
       <div class="showPUIButtonContainer">
-        <button class="showPUIButton">Show Premium Layouts</button>
+        <button class="showPUIButton">
+          <span id="crownIcon">👑</span>
+          <p id="showLayoutsText">Show Premium Layouts</p>
+        </button>
       </div>
       <div class="exitPreviewContainer">
         <button class="exitPreview">Exit preview</button>
