Added show pass listener and made change MP tab on side

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -37,9 +37,14 @@
           <i class="far fa-times-circle" id="closeSettings"></i>
           <div class="changeMasterPasswordScreen">
             <h3 class="changeMasterPasswordHeader">Change Master Password</h3>
-            <input type="password" class="changeMPCurrentMP changeMPInput" />
-            <input type="password" class="changeMPNewMP changeMPInput" />
-            <input type="password" class="changeMPRenterNewMP changeMPInput" />
+            <div class="changeMPInputsContainer">
+              <input type="password" class="changeMPCurrentMP changeMPInput" />
+              <input type="password" class="changeMPNewMP changeMPInput" />
+              <input
+                type="password"
+                class="changeMPRenterNewMP changeMPInput"
+              />
+            </div>
             <div class="changeMPFooter">
               <p class="showPasswordsText">
                 Show Passwords&nbsp;&nbsp;<i
