Added popup for any abnormal errors

--- a/src/login.html
+++ b/src/login.html
@@ -77,6 +77,15 @@
           <h4>if you weren't aware of this</h4>
           <button id="continueAccountDisabled">Continue</button>
         </div>
+        <div class="errorHasOccuredBox">
+          <h3 id="errorHasOccuredHeader">An error has occurred signing in</h3>
+          <h4 id="pcText">Please contact</h4>
+          <h4 id="supportEmail" style="color: rgb(0, 255, 213)">
+            personal.pm.help.email@gmail.com
+          </h4>
+          <h4 id="ifYouWerentAwareText">if you weren't aware of this</h4>
+          <button id="continueErrorHasOccurred">Continue</button>
+        </div>
       </div>
     </div>
   </body>
