Fixed flex properties for settings page
Also started security settings section here

--- a/src/mainPage.html
+++ b/src/mainPage.html
@@ -79,6 +79,10 @@
                 </button>
               </div>
             </div>
+            <div class="securitySettingsSection">
+              <h3 class="securitySettingsHeader">Security</h3>
+              <div class="securitySettings"></div>
+            </div>
           </div>
         </div>
 
