Loading body html after MFA check

--- a/src/appSelector.html
+++ b/src/appSelector.html
@@ -19,91 +19,8 @@
     <script src="resizeAppSelector.js"></script>
   </head>
   <body>
-    <div class="themeSelectorContainer">
-      <h1 id="closeThemeSelector">x</h1>
-      <h2 id="themeSelectorHeader">PM themes</h2>
-      <div class="backgroundGridContainer">
-        <img
-          id="backgroundGridItemPremiumAmin"
-          class="backgroundGridItem"
-          src="images/themes/purple-blue.png"
-          alt="Image not available"
-        />
-        <img
-          id="backgroundGridItemPremiumPurple"
-          class="backgroundGridItem"
-          src="images/themes/purple-classy.png"
-          alt="Image not available"
-        />
-        <img
-          id="backgroundGridItemNormalStyles"
-          class="backgroundGridItem"
-          src="images/themes/normal.png"
-          alt="Image not available"
-        />
-        <img
-          id="backgroundGridItemPremiumFrost"
-          class="backgroundGridItem"
-          src="images/themes/Frost.png"
-          alt="Image not available"
-        />
-        <img
-          id="backgroundGridItemPremiumBlack"
-          class="backgroundGridItem"
-          src="images/themes/black.png"
-          alt="Image not available"
-        />
-        <img
-          id="backgroundGridItemPremiumGrey"
-          class="backgroundGridItem"
-          src="images/themes/grey.png"
-          alt="Image not available"
-        />
-      </div>
-    </div>
-    <div id="container">
-      <div class="showPUIButtonContainer">
-        <button class="showPUIButton">
-          <span id="crownIcon">👑</span>
-          <p id="showLayoutsText">Show Premium Layouts</p>
-        </button>
-      </div>
-      <div class="exitPreviewContainer">
-        <button class="exitPreview">Exit preview</button>
-      </div>
-      <div class="upgradeToPContainer">
-        <button class="upgradeToP">
-          <span id="lockIconUpgrade">🗝️</span>
-          <p id="upgradeButtonText">Upgrade to premium</p>
-        </button>
-      </div>
-      <div class="keyImage">
-        <img id="realIcon" src="images/lockIcon.png" />
-      </div>
-      <h1 id="nameHeader">Personal PM</h1>
-      <button id="takeToPMButton" class="redirectAppButtons">
-        <i class="fas fa-key" id="keyPMIcon"></i>
-        <p id="pmButtonText">Password Manager</p>
-      </button>
-      <button id="takeToLockerButton" class="redirectAppButtons">
-        <i class="fas fa-folder" id="docLockerIcon"></i>
-        <p id="lockerButtonText">Personal Locker</p>
-      </button>
-      <a href="mainPage.html" id="takeToPMLinkHidden"></a>
-      <a href="locker.html" id="takeToLockerLinkHidden"></a>
-      <a href="login.html" id="fromMainToLogin"></a>
-    </div>
-    <div id="backToLoginLinkContainer">
-      <a href="#" id="backToLoginLink">Log Out</a>
-    </div>
-    <a href="login.html" id="backToLoginLinkHidden">Back to login</a>
+    <!-- Loaded by changeAppSelectorProperties.js -->
   </body>
-  <script defer src="appSelector.js"></script>
-  <script
-    defer
-    src="signOutMainListenerWithBackButton.js"
-    type="module"
-  ></script>
   <script defer src="signOutMainListener.js" type="module"></script>
   <script defer src="changeAppSelectorProperties.js" type="module"></script>
   <!-- <script>
