--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <script>
       if ("%REACT_APP_DEVTOOLS%".trim() === "enabled")
-        document.write('<script src="http:\/\/localhost:8097"><\/script>');
+        document.write('<script src="http:\/\/127.0.0.1:8097"><\/script>');
     </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
